--- a/src/main.css
+++ b/src/main.css
@@ -81,10 +81,14 @@
 .form-options {
   display: flex;
   flex-direction: column;
-  height: 270px;
+  height: 205px;
   overflow: hidden;
   padding: 30px 10px;
   transition: height 0.3s, padding 0.3s; }
+
+@media (min-width: 480px) {
+  .form-options {
+    height: 240px; } }
 
 @media (min-width: 768px) {
   .form-options {
@@ -100,8 +104,9 @@
   .form-options--isHidden {
     padding: 0 15px; } }
 
-.form-options .form-section:first-child {
-  margin-right: 50px; }
+@media (min-width: 480px) {
+  .form-options .form-section:first-child {
+    margin-right: 50px; } }
 
 .form-settingsFeedback {
   font-size: 12px;
@@ -173,28 +178,38 @@
   outline: 0; }
 
 .form .input-textContent[contenteditable]:empty::before {
-  content: "Type something..";
+  content: 'Type something..';
   opacity: 0.2; }
 
 .form .input-typeSelect-label, .form .input-timeSelect-label {
   margin-left: 0;
   margin-bottom: 10px; }
 
-@media (min-width: 480px) {
-  .form .input-typeSelect-label, .form .input-timeSelect-label {
-    margin-bottom: 5px; } }
-
 .form .input-timeSelect {
   background-color: #292929;
+  border: 1px solid #e3e3e3;
+  box-shadow: 3px 3px 8px 8px rgba(0, 0, 0, 0.04), 0 20px 40px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 13px;
   min-width: 80px; }
 
-@media (min-width: 768px) {
+@media (min-width: 480px) {
   .form .input-timeSelect {
-    margin-bottom: 4px; } }
+    border: 0;
+    box-shadow: none;
+    margin-bottom: 9px; } }
 
-.form .input-timeSelect:last-child {
-  margin-bottom: 0; }
+@media (min-width: 768px) {
+  .form .input-timeSelect:last-child {
+    margin-bottom: 0; } }
+
+.form .input-timeSelect-wrapper {
+  align-items: center;
+  display: flex;
+  justify-content: space-between; }
+
+@media (min-width: 480px) {
+  .form .input-timeSelect-wrapper {
+    display: block; } }
 
 .form-anonymous {
   display: flex;
@@ -207,12 +222,12 @@
 .form-anonymous--isExtended {
   height: 75px; }
 
-.form-anonymous--isExtended input[type="text"].form-nameField {
+.form-anonymous--isExtended input[type='text'].form-nameField {
   opacity: 1;
   pointer-events: auto;
   transition-delay: 0.35s; }
 
-.form-anonymous--isExtended input[type="text"].form-nameField::placeholder {
+.form-anonymous--isExtended input[type='text'].form-nameField::placeholder {
   font-weight: 400; }
 
 .form-anonymous .form-checkbox {
@@ -230,7 +245,7 @@
 .form-anonymous .form-checkbox:after {
   border-bottom: 2px solid #e3e3e3;
   border-right: 2px solid #e3e3e3;
-  content: "";
+  content: '';
   display: inline-block;
   height: 8px;
   left: 4px;
@@ -241,7 +256,7 @@
   transition: opacity 0.3s;
   width: 3px; }
 
-.form-anonymous input[type="text"] {
+.form-anonymous input[type='text'] {
   background-color: transparent;
   border: none;
   box-shadow: 3px 3px 8px 8px rgba(0, 0, 0, 0.04), 0 20px 40px 0 rgba(0, 0, 0, 0.2);
@@ -254,16 +269,16 @@
   transition: opacity 0.3s; }
 
 @media (min-width: 480px) {
-  .form-anonymous input[type="text"] {
+  .form-anonymous input[type='text'] {
     max-width: 50%; } }
 
-.form-anonymous input[type="text"]:focus, .form-anonymous input[type="text"]:hover {
+.form-anonymous input[type='text']:focus, .form-anonymous input[type='text']:hover {
   background-color: #2f2e2e;
   border: 0;
   outline: 0; }
 
-.form-anonymous input[type="text"]::placeholder {
-  font-family: "Consolas", sans-serif;
+.form-anonymous input[type='text']::placeholder {
+  font-family: 'Consolas', sans-serif;
   font-weight: bold;
   opacity: 0.65; }
 
@@ -285,6 +300,10 @@
   .form-section-radio {
     margin-top: 0;
     max-width: 420px; } }
+
+.form-radio {
+  cursor: pointer;
+  max-height: 8px; }
 
 .form-radio-wrapper {
   display: flex;
@@ -595,41 +614,22 @@ input[type='text'] {
   resize: none;
   width: 100%; }
 
-input[type='radio']:after {
+input[type='radio']:after,
+input[type='radio']:checked:after {
   background-color: #e3e3e3;
   border: 2px solid #e3e3e3;
   border-radius: 8px;
   content: '';
   display: inline-block;
   height: 8px;
-  left: 2px;
+  left: 0px;
   position: relative;
-  top: 2px;
+  top: 0px;
   visibility: visible;
   width: 8px; }
-
-@media (min-width: 480px) {
-  input[type='radio']:after {
-    left: 0;
-    top: 0; } }
 
 input[type='radio']:checked:after {
-  background-color: #868889;
-  border: 2px solid white;
-  border-radius: 8px;
-  content: '';
-  display: inline-block;
-  height: 8px;
-  left: 2px;
-  position: relative;
-  top: 2px;
-  visibility: visible;
-  width: 8px; }
-
-@media (min-width: 480px) {
-  input[type='radio']:checked:after {
-    left: 0;
-    top: 0; } }
+  background-color: #868889; }
 
 .centerComponentVertically {
   align-items: center;
